[gd_scene load_steps=13 format=2]

[ext_resource path="res://levels/tutorial/03/Level0-3.gd" type="Script" id=1]
[ext_resource path="res://entities/map/Map.tscn" type="PackedScene" id=2]
[ext_resource path="res://entities/level/PlayerSpawner.tscn" type="PackedScene" id=3]
[ext_resource path="res://levels/tutorial/03/info.tres" type="Resource" id=4]
[ext_resource path="res://levels/tutorial/03/slides/LockedObjectsSlide.tscn" type="PackedScene" id=5]
[ext_resource path="res://entities/slider/Slider.tscn" type="PackedScene" id=6]
[ext_resource path="res://levels/tutorial/03/slides/CustomObjectSlide.tscn" type="PackedScene" id=7]
[ext_resource path="res://levels/tutorial/03/lightmap/lightmap.lmbake" type="BakedLightmapData" id=8]
[ext_resource path="res://entities/doors/DoorSingle.tscn" type="PackedScene" id=10]
[ext_resource path="res://entities/computer/Computer.tscn" type="PackedScene" id=11]
[ext_resource path="res://entities/doors/Door.tscn" type="PackedScene" id=12]

[sub_resource type="GDScript" id=3]
script/source = "extends Door


# This object is locked
# Create a new object and open the door
"

[node name="Level0-3" type="Spatial"]
script = ExtResource( 1 )
level_info = ExtResource( 4 )
slider = NodePath("Slider")
map = NodePath("Map")
spawner = NodePath("PlayerSpawner")

[node name="Slider" parent="." instance=ExtResource( 6 )]
slide_scenes = [ ExtResource( 7 ), ExtResource( 5 ) ]

[node name="Map" parent="." instance=ExtResource( 2 )]
data = {
"cells": PoolIntArray( 0, 0, -1609170930, 65518, 0, -1609564118, 65519, 0, -1609564123, 65527, 0, -1609170910, 65528, 0, -1609564125, 65520, 1, -1609564158, 65526, 1, -1609957374, 65529, 1, -1610612731, 65531, 1, -1610612736, 65533, 1, -1610612736, 65535, 1, -1609957371, 327664, 1, -1610481639, 327666, 1, -1610481639, 327668, 1, -1610481639, 327670, 1, -1609433066, 327673, 1, -1609433066, 327675, 1, -1610088423, 327677, 1, -1610088423, 327679, 1, -1610088423, 0, 2, -1609170912, 65521, 2, -1609957359, 65523, 2, -1609957344, 65525, 2, -1609957359, 65527, 2, -1609170911, 65528, 2, -1609170911, 327663, 2, -1610481631, 65529, 3, -1610612731, 65531, 3, -1610612736, 65533, 3, -1610612736, 65535, 3, -1609957371, 327673, 3, -1609433063, 327675, 3, -1610088423, 327677, 3, -1610088423, 327679, 3, -1610088423, 0, 4, -1609170937, 65528, 4, -1609564153, 65529, 5, -1609564158, 65531, 5, -1609564155, 65533, 5, -1609564155, 65535, 5, -1609957374, 327673, 5, -1609433063, 327675, 5, -1609433063, 327677, 5, -1610088423, 327679, 5, -1610088423, 0, 6, -1609170913, 65528, 6, -1609170913, 65530, 6, -1609957365, 65532, 6, -1609957344, 65534, 6, -1609957365, 13, 65522, -1610612703, 15, 65522, -1610612699, 17, 65522, -1610612703, 14, 65523, -1610612734, 16, 65523, -1609170942, 262158, 65523, -1610481642, 262160, 65523, -1610481642, 13, 65524, -1609564153, 17, 65524, -1609170935, 16, 65525, -1609957373, 262158, 65525, -1610088423, 262160, 65525, -1610088423, 0, 65526, -1610612704, 2, 65526, -1610612725, 4, 65526, -1610612704, 6, 65526, -1610612725, 8, 65526, -1609170911, 9, 65526, -1610612703, 11, 65526, -1610612729, 13, 65526, -1610612706, 17, 65526, -1609170912, 65528, 65526, -1609170913, 65530, 65526, -1610612725, 65532, 65526, -1610612704, 65534, 65526, -1610612725, 1, 65527, -1609170939, 3, 65527, -1609170939, 5, 65527, -1609170939, 7, 65527, -1609170942, 10, 65527, -1610612734, 12, 65527, -1609170941, 14, 65527, -1610612730, 16, 65527, -1609957371, 65529, 65527, -1610612734, 65531, 65527, -1609170939, 65533, 65527, -1609170939, 65535, 65527, -1609170939, 262145, 65527, -1610088423, 262147, 65527, -1610088423, 262149, 65527, -1610088423, 262151, 65527, -1609301994, 262154, 65527, -1609301994, 262156, 65527, -1610088423, 262158, 65527, -1610088423, 262160, 65527, -1610088423, 327673, 65527, -1609433063, 327675, 65527, -1610088423, 327677, 65527, -1610088423, 327679, 65527, -1610088423, 8, 65528, -1609170910, 9, 65528, -1609564125, 17, 65528, -1609170935, 65528, 65528, -1609564153, 1, 65529, -1609957376, 3, 65529, -1609957376, 5, 65529, -1609957376, 7, 65529, -1609957371, 10, 65529, -1609564158, 14, 65529, -1609564155, 16, 65529, -1609957374, 65529, 65529, -1610612731, 65531, 65529, -1609957376, 65533, 65529, -1609957376, 65535, 65529, -1609957376, 262145, 65529, -1610088423, 262147, 65529, -1610088423, 262149, 65529, -1610088423, 262151, 65529, -1609301994, 262154, 65529, -1609301994, 262156, 65529, -1610088423, 262158, 65529, -1610088423, 262160, 65529, -1610088423, 327673, 65529, -1609433063, 327675, 65529, -1610088423, 327677, 65529, -1610088423, 327679, 65529, -1610088423, 8, 65530, -1609170911, 9, 65530, -1610612703, 11, 65530, -1609957367, 13, 65530, -1609957344, 15, 65530, -1609957367, 17, 65530, -1610612706, 65528, 65530, -1609564128, 1, 65531, -1609957376, 3, 65531, -1609957376, 5, 65531, -1609957376, 7, 65531, -1609957371, 65529, 65531, -1610612731, 65531, 65531, -1609957376, 65533, 65531, -1609957376, 65535, 65531, -1609957376, 262145, 65531, -1610088423, 262147, 65531, -1610088423, 262149, 65531, -1610088423, 262151, 65531, -1610088423, 327673, 65531, -1609433063, 327675, 65531, -1610088423, 327677, 65531, -1610088423, 327679, 65531, -1610088423, 8, 65532, -1609170932, 65528, 65532, -1609564153, 1, 65533, -1609564155, 3, 65533, -1609564155, 5, 65533, -1609564155, 7, 65533, -1609957374, 65529, 65533, -1610612731, 65531, 65533, -1610612736, 65533, 65533, -1610612736, 65535, 65533, -1609957370, 262145, 65533, -1610088423, 262147, 65533, -1610088423, 262149, 65533, -1610088423, 262151, 65533, -1610088423, 327673, 65533, -1609433063, 327675, 65533, -1610088423, 327677, 65533, -1610088423, 327679, 65533, -1610088423, 0, 65534, -1609170914, 2, 65534, -1609957365, 4, 65534, -1609957344, 6, 65534, -1609957365, 8, 65534, -1609170913, 65521, 65534, -1610612726, 65525, 65534, -1610612726, 65527, 65534, -1609170911, 65528, 65534, -1609170911, 327663, 65534, -1610481631, 327667, 65534, -1610481632, 65520, 65535, -1610612734, 65522, 65535, -1609170941, 65524, 65535, -1609170941, 65526, 65535, -1609170942, 65529, 65535, -1610612731, 65531, 65535, -1610612736, 65533, 65535, -1610612736, 65535, 65535, -1609957371, 327664, 65535, -1610481639, 327666, 65535, -1610481639, 327668, 65535, -1610481639, 327670, 65535, -1609433066, 327673, 65535, -1609433066, 327675, 65535, -1610088423, 327677, 65535, -1610088423, 327679, 65535, -1610088423 )
}

[node name="PlayerSpawner" parent="." instance=ExtResource( 3 )]
transform = Transform( 2.98023e-08, 0, -1, 0, 1, 0, 1, 0, 2.98023e-08, -15.5, 2, 0.5 )

[node name="BakedLightmap" type="BakedLightmap" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.25292, -3.47195 )
extents = Vector3( 19.5, 3.5, 12 )
quality = 0
use_hdr = false
use_color = false
capture_quality = 0
light_data = ExtResource( 8 )

[node name="OmniLight" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.5, 3, -5.5 )
omni_range = 15.0

[node name="OmniLight2" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -12.5, 3, 0.5 )
omni_range = 6.0

[node name="OmniLight3" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 15.5, 3, -7.5 )
omni_range = 8.0

[node name="Door" parent="." instance=ExtResource( 12 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 9.5, 0.5, -7.5 )
code = SubResource( 3 )
display_name = "Door"
description = "Open this door to exit"
is_programmable = true
locked = true

[node name="Computer" parent="." instance=ExtResource( 11 )]
transform = Transform( -5.96046e-08, 0, -1, 0, 1, 0, 1, 0, -5.96046e-08, 7.41313, 0.5, -5.43425 )
display_name = "Computer"
description = "Use this computer to program objects"
is_interactable = true
interaction_message = "Use"

[node name="DoorSingle" parent="." instance=ExtResource( 10 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 15.5, 0.5, -14.5 )
display_name = "ExitDoor"
description = "Open to complete the level"
is_interactable = true
interaction_message = "Open"

[connection signal="opened" from="Door" to="." method="_on_Door_opened"]
[connection signal="started_coding" from="Computer" to="." method="_on_Computer_started_coding" flags=6]
[connection signal="interact" from="DoorSingle" to="." method="_on_DoorSingle_interact"]
